syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

// type : "announce_start_turn"
// packet_type : DEFAULT
message AnnounceStartTurnPayload { string player = 1; }